knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Org_Chart_Field__c/fields/pqcrush__FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__FieldLabel__c</fullName>
    <label>Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>