knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Org_Chart_Field__c/fields/pqcrush__FieldName__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__FieldName__c</fullName>
    <description>Name of the related field</description>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>