knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Org_Chart_Field__c/fields/pqcrush__IsMain__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__IsMain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if you want the field to show up in the main section of the card.  Otherwise, it will show up in the secondary area, that is hidden until users open the card</description>
    <label>IsMain</label>
    <type>Checkbox</type>
</CustomField>