knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Org_Chart_Field__c/fields/pqcrush__isRequired__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__isRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the related field can is allowed to be removed from the org chart display</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>