knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Org_Chart_Field__c/fields/pqcrush__isVisible__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__isVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the related field is visible in the org chart user interface</description>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>