knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Org_Chart_Field__c/fields/pqcrush__Map_Type__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Map_Type__c</fullName>
    <label>Map Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pqcrush__Map_Type</valueSetName>
    </valueSet>
</CustomField>