knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Org_Chart_Field__c/fields/pqcrush__Order__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Order__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Order</label>
    <type>AutoNumber</type>
</CustomField>