knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Org_Chart_Field__c/fields/pqcrush__Related_FieldName__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Related_FieldName__c</fullName>
    <description>the API Name of the related field</description>
    <label>Related Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>